added news notebook

--- a/Pokemon data collection.ipynb
+++ b/Pokemon data collection.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "honey-character",
+   "id": "front-lecture",
    "metadata": {},
    "source": [
-    "### Import request library"
+    "### Import request and json library"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "robust-lloyd",
+   "id": "rational-national",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "\n",
+    "import json\n",
     "URL=\"https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "touched-fetish",
+   "id": "numeric-crime",
    "metadata": {},
    "source": [
     "### Load Page"
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dangerous-philip",
+   "id": "consecutive-routine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "iraqi-details",
+   "id": "joined-transsexual",
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "creative-retention",
+   "id": "solid-layer",
    "metadata": {},
    "source": [
     "### Parse HTML data"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "environmental-assurance",
+   "id": "banned-pharmacology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-hunger",
+   "id": "central-stream",
    "metadata": {},
    "source": [
     "### Find all tables that contain Pokemon details"
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "unique-channels",
+   "id": "twelve-judge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "billion-processor",
+   "id": "nasty-barcelona",
    "metadata": {},
    "source": [
     "### Get a list of all generations of Pokemon"
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "minus-complex",
+   "id": "conventional-uganda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "significant-criticism",
+   "id": "characteristic-strike",
    "metadata": {},
    "source": [
     "### Put all pokemon information in JSON file"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adapted-gather",
+   "id": "cardiovascular-flower",
    "metadata": {},
    "source": [
     "#### There will be a total of 9 lists. 8 lists for each generations and 1 list for combined generation."
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "corrected-tomorrow",
+   "id": "respiratory-forestry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controlling-lesbian",
+   "id": "reduced-sheet",
    "metadata": {},
    "source": [
     "## Generation 1"
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "owned-express",
+   "id": "persistent-vision",
    "metadata": {},
    "outputs": [
     {
@@ -1223,27 +1223,27 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "biblical-california",
+   "id": "historic-render",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "180"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[0])"
+    "print(len(json_list[0]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen1.json', 'w') as outfile:\n",
+    "    json.dump(json_list[0], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "wooden-september",
+   "id": "peaceful-milton",
    "metadata": {},
    "source": [
     "## Generation 2"
@@ -1252,7 +1252,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fleet-technician",
+   "id": "pacific-stations",
    "metadata": {},
    "outputs": [
     {
@@ -1832,27 +1832,27 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "broken-equilibrium",
+   "id": "billion-christianity",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "102"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[1])"
+    "print(len(json_list[1]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen2.json', 'w') as outfile:\n",
+    "    json.dump(json_list[1], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "labeled-taxation",
+   "id": "oriented-samuel",
    "metadata": {},
    "source": [
     "## Generation 3"
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "viral-river",
+   "id": "collective-russian",
    "metadata": {},
    "outputs": [
     {
@@ -2664,27 +2664,27 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "actual-spouse",
+   "id": "violent-cleaners",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "143"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "143\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[2])"
+    "print(len(json_list[2]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen3.json', 'w') as outfile:\n",
+    "    json.dump(json_list[2], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "adjustable-opera",
+   "id": "unlike-shade",
    "metadata": {},
    "source": [
     "## Generation 4"
@@ -2693,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "alive-disability",
+   "id": "initial-cannon",
    "metadata": {},
    "outputs": [
     {
@@ -3376,27 +3376,27 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "contemporary-broadway",
+   "id": "reflected-donna",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[3])"
+    "print(len(json_list[3]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen4.json', 'w') as outfile:\n",
+    "    json.dump(json_list[3], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "liable-blend",
+   "id": "established-fireplace",
    "metadata": {},
    "source": [
     "## Generation 5"
@@ -3405,7 +3405,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "steady-harris",
+   "id": "cognitive-framing",
    "metadata": {},
    "outputs": [
     {
@@ -4342,27 +4342,27 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "banned-break",
+   "id": "activated-zimbabwe",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "167"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "167\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[4])"
+    "print(len(json_list[4]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen5.json', 'w') as outfile:\n",
+    "    json.dump(json_list[4], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bronze-volunteer",
+   "id": "broke-investigation",
    "metadata": {},
    "source": [
     "## Generation 6"
@@ -4371,7 +4371,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "hidden-stations",
+   "id": "vocational-linux",
    "metadata": {},
    "outputs": [
     {
@@ -4798,27 +4798,27 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "appreciated-style",
+   "id": "primary-russian",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "73"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[5])"
+    "print(len(json_list[5]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen6.json', 'w') as outfile:\n",
+    "    json.dump(json_list[5], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "forward-treasure",
+   "id": "spread-performer",
    "metadata": {},
    "source": [
     "## Generation 7"
@@ -4827,7 +4827,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "alone-timeline",
+   "id": "indoor-wheat",
    "metadata": {},
    "outputs": [
     {
@@ -5360,27 +5360,27 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "graduate-buyer",
+   "id": "rapid-tolerance",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "91"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[6])"
+    "print(len(json_list[6]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen7.json', 'w') as outfile:\n",
+    "    json.dump(json_list[6], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-reality",
+   "id": "daily-wesley",
    "metadata": {},
    "source": [
     "## Generation 8"
@@ -5389,7 +5389,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "following-costs",
+   "id": "solved-raising",
    "metadata": {},
    "outputs": [
     {
@@ -5921,27 +5921,27 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "oriented-valley",
+   "id": "afraid-sauce",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "94"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94\n"
+     ]
     }
    ],
    "source": [
-    "len(json_list[7])"
+    "print(len(json_list[7]))\n",
+    "#Creates a file\n",
+    "with open('./pokemonData/gen8.json', 'w') as outfile:\n",
+    "    json.dump(json_list[7], outfile)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "natural-harvard",
+   "id": "dense-white",
    "metadata": {},
    "source": [
     "## All generations"
@@ -5950,7 +5950,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "animal-zimbabwe",
+   "id": "improved-peoples",
    "metadata": {},
    "outputs": [
     {
@@ -11314,22 +11314,22 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "practical-hartford",
+   "id": "future-advisory",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "970"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "970\n"
+     ]
     }
    ],
    "source": [
-    "len(all_gen_json)"
+    "print(len(all_gen_json))\n",
+    "#Creates a file\n",
+    "with open(\"./pokemonData/allGen.json\", 'w') as outfile:\n",
+    "    json.dump(all_gen_json, outfile)"
    ]
   }
  ],
