Update News data collection.ipynb

--- a/News data collection.ipynb
+++ b/News data collection.ipynb
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<newsapi.newsapi_client.NewsApiClient at 0x2f44902f220>"
+       "<newsapi.newsapi_client.NewsApiClient at 0x1ef0b4b9280>"
       ]
      },
      "execution_count": 2,
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "recreational-aruba",
+   "id": "italian-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cathedral-zoning",
+   "id": "sunset-booth",
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "choice-surge",
+   "id": "controlled-security",
    "metadata": {},
    "source": [
     "### Put date, title, full article, and author in a json file"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fuzzy-sandwich",
+   "id": "actual-yahoo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dressed-newspaper",
+   "id": "cubic-steal",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "extreme-transcription",
+   "id": "aboriginal-murder",
    "metadata": {},
    "outputs": [
     {
@@ -392,8 +392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "defensive-swaziland",
+   "execution_count": 8,
+   "id": "favorite-devon",
    "metadata": {},
    "outputs": [],
    "source": [
